Fix header and footer to align with the game board

--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -1,9 +1,10 @@
 .game-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     /* padding: 2rem; */
     max-width: 800px;
+    width: fit-content;
     margin: 0 auto;
 }
 
@@ -12,7 +13,6 @@
     align-items: flex-start;
     gap: 2rem;
     justify-content: center;
-    width: 100%;
     flex-wrap: nowrap;
 }
 
@@ -169,7 +169,6 @@
 }
 
 footer {
-    width: 100%;
     margin-top: 2rem;
     padding-bottom: 2rem;
     text-align: right;
@@ -194,9 +193,8 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     /* margin-bottom: 2rem; */
-    padding: 0 1.5rem 2rem 1.5rem;
+    padding: 0 0 2rem 0;
 }
 
 .header-actions {
